# MiniNginx-Bingyan-Studio-Backend-Internship

./: .gitignore  CMakeLists.txt  README.md
conf/: mininginx.conf
include/config/: Config.h
include/net/: Server.h
src/: main.cpp
src/config/: Config.cpp
src/handlers/: ProxyHandler.cpp  StaticHandler.cpp
src/net/: Server.cpp
static/: index.html
